--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,8 @@ always_allow_html: true
 output:
   bookdown::gitbook:
     css: styles.css
+  bookdown::pdf_document2:
+    latex_engine: xelatex
 bibliography: [references.bib]
 biblio-style: "apalike"
 link-citations: true
